feat: adds api routes for fetching tiles
